fix(footer): remove top ul and align with page content

--- a/css/components/card.css
+++ b/css/components/card.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  flex-grow: 1;
 }
 
 .card .card-row {
