--- a/css/section/footer.css
+++ b/css/section/footer.css
@@ -1,7 +1,9 @@
 footer {
   background-color: #f2f2f2;
-  padding-top: 10px;
-  padding-bottom: 20px;
+  padding: 20px 0px 20px 30px;
+  width: 100%;
+
+  display: flex;
 }
 
 footer ul {
@@ -13,21 +15,15 @@ footer li {
   list-style-type: none;
 }
 
-.footer-category li {
-  padding-bottom: 15px;
-}
-
-footer .footer-content {
-  margin-top: 20px;
-  display: flex;
-  width: 80%;
-  justify-content: space-around;
-}
-
 footer .footer-category {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  width: calc((100vw - 40px) / 3);
+}
+
+.footer-category li {
+  padding-bottom: 15px;
 }
 
 .footer-category .title {
